<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>telus-automation</groupId>
	<artifactId>myTestRepo</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>bpedhealthckeck</name>
	<url>http://maven.apache.org</url>


	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>1.8</java.version>
		<maven.compiler.version>2.3.2</maven.compiler.version>
		<maven.surefire.version>2.19.1</maven.surefire.version>
		<extentreports.version>3.1.2</extentreports.version>
		<cucumberJVMParallelPluginVersion>1.0.1</cucumberJVMParallelPluginVersion>
		<karate.core.version>6.1-SNAPSHOT</karate.core.version>
		<!-- SONAR PROPERTIES -->
		<sonar.sources>src/main</sonar.sources>
		<libpath>${project.basedir}\lib\</libpath>
		<sonar.tests>src/test</sonar.tests>
	</properties>

	<build>
		<finalName>${project.artifactId}</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.version}</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven.surefire.version}</version>
				<configuration>
					<argLine>-Dfile.encoding=UTF-8</argLine>
				</configuration>
				<executions>
					<execution>
						<id>default-test</id>
						<configuration>
							<skip>false</skip>
							<suiteXmlFiles>
								<suiteXmlFile>testng.xml</suiteXmlFile>
							</suiteXmlFiles>
						</configuration>
					</execution>

					<execution>
						<id>test</id>
						<phase>test</phase>
						<goals>
							<goal>test</goal>
						</goals>
						<configuration>
							<forkCount>${forkCount}</forkCount>
							<reuseForks>false</reuseForks>
							<argLine>-Duser.language=en</argLine>
							<argLine>-Xmx1024m</argLine>
							<argLine>-XX:MaxPermSize=256m</argLine>
							<argLine>-Dfile.encoding=UTF-8</argLine>
							<useFile>false</useFile>
							<includes>
								<include>**/Parallel*.java</include>
							</includes>
							<excludes>
								<exclude>**/Abstract*.java</exclude>
							</excludes>
							<junitArtifactName>junit:junit</junitArtifactName>
							<argLine>-Xmx512m</argLine>
							<testFailureIgnore>true</testFailureIgnore>
						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>**/*.properties</include>
				</includes>
				<excludes>
					<exclude>**/*.exe</exclude>
				</excludes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>false</filtering>
				<excludes>
					<exclude>**/*.properties</exclude>
				</excludes>
			</resource>
		</resources>
	</build>
	<dependencies>
		<dependency>
			<groupId>telus.bt.automation</groupId>
			<!-- <artifactId>telus-test-selenium-ui-core</artifactId> -->
			<artifactId>telus-test-selenium-ui-core</artifactId>
			<version>6.0-SNAPSHOT</version>
		</dependency>
	</dependencies>

</project>